# Robocon2025_R1

./: .gitignore  README.md  git_pull.sh  git_push.sh  log.txt  reciver.py  requirements.txt  smart_start.sh  start.sh
2025R1_ws/: .start.sh.swp  data_monitor.sh  new_start.sh  start.sh  test.sh
2025R1_ws/install/: local_setup.sh  setup.sh
2025R1_ws/install/damiao/lib/damiao/: damiao_read_node
2025R1_ws/install/damiao/share/damiao/: package.sh  package.xml
2025R1_ws/install/data_monitor/lib/data_monitor/: data_sender
2025R1_ws/install/data_monitor/share/data_monitor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
2025R1_ws/install/navigation/lib/navigation/: active_caster_node  degree_reader  read_degree_node  wheel
2025R1_ws/install/navigation/share/navigation/: package.sh  package.xml
2025R1_ws/install/ps4/share/ps4/: package.sh  package.xml
2025R1_ws/log/: latest_build  latest_list
2025R1_ws/src/active_caster/: package.xml  setup.py
2025R1_ws/src/active_caster/active_caster/: .vesc_canbus_speed_control_node.py.swp  damiao_node.py  vesc_canbus_speed_control_node.py  vesc_node.py
2025R1_ws/src/active_caster/vesc/: package.xml  setup.py
2025R1_ws/src/active_caster/vesc/vesc/: active_wheel.py  wheel.py
2025R1_ws/src/bounce/: README.md  package.xml  setup.cfg  setup.py
2025R1_ws/src/bounce/bounce/: bounce_control_node.py  bounce_relays_node.py
2025R1_ws/src/bounce/launch/: bounce_launch.py
2025R1_ws/src/damiao/damiao/: damiao_node.py
2025R1_ws/src/data_monitor/: package.xml  setup.cfg  setup.py
2025R1_ws/src/data_monitor/data_monitor/: data_sender.py
2025R1_ws/src/joystick_driver/: README.md  package.xml  setup.py
2025R1_ws/src/joystick_driver/joystick_driver/: joystick_publisher_node.py
2025R1_ws/src/joystick_msgs/: CMakeLists.txt  package.xml
2025R1_ws/src/joystick_msgs/msg/: Joystick.msg
2025R1_ws/src/navigation/: setup.py
2025R1_ws/src/navigation/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
2025R1_ws/src/navigation/install/navigation/lib/navigation/: active_caster_node  read_degree_node
2025R1_ws/src/navigation/install/navigation/share/navigation/: package.sh  package.xml
2025R1_ws/src/navigation/log/: latest_build
2025R1_ws/src/navigation/navigation/: active_caster_ctrl_node.py  active_caster_node.py  auto_move_node.py  move_support.py  navigation_node.py  navigation_node_R2.py  wheel.py
2025R1_ws/src/r1_launch/: package.xml  setup.cfg  setup.py
2025R1_ws/src/r1_launch/launch/: launch.py
2025R1_ws/src/shooter/: package.xml  setup.cfg  setup.py
2025R1_ws/src/shooter/launch/: shooter.launch.py
2025R1_ws/src/shooter/shooter/: DM_can.py  shooter_control_node.py  shooter_damiao_node.py  shooter_vesc_node.py
VESC Backup/: Base 1.xml  VESC 10.xml  VESC 11.xml  VESC 12.xml
active_caster/: package.xml  setup.cfg
