<?xml version="1.0"?>
<package format="3">
  <name>bounce</name>
  <version>0.0.1</version>
  <description>ROS package for bounce control with joystick input</description>
  <maintainer email="s1153766@s.eduhk.hk">Steven Zhang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-gpiod</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
